--- a/libs/qt5/Makefile
+++ b/libs/qt5/Makefile
@@ -10,9 +10,9 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=qt5
-PKG_VERSION:=5.10
-PKG_RELEASE:=1
-PKG_MD5SUM:=7e167b9617e7bd64012daaacb85477af
+PKG_VERSION:=5.12
+PKG_RELEASE:=4
+PKG_MD5SUM:=dda95b0239d13c5276834177af3a8588
 
 PKG_SOURCE:=qt-everywhere-src-$(PKG_VERSION).$(PKG_RELEASE).tar.xz
 PKG_SOURCE_URL:=http://download.qt-project.org/archive/qt/$(PKG_VERSION)/$(PKG_VERSION).$(PKG_RELEASE)/single
@@ -69,7 +69,7 @@ endef
 define Package/qt5-sql
   $(call Package/qt5/Default)
   TITLE+=sql
-  DEPENDS+=+qt5-core +libmariadbclient
+  DEPENDS+=+qt5-core +libmysqlclient +libpq +libsqlite3
 endef
 
 define Package/qt5-xml
@@ -111,12 +111,13 @@ define Build/Configure
 		TARGET_RANLIB="$(TARGET_CROSS)ranlib" \
 		TARGET_CFLAGS="$(TARGET_CFLAGS) $(EXTRA_CFLAGS)" \
 		TARGET_CXXFLAGS="$(TARGET_CFLAGS) $(EXTRA_CFLAGS)" \
-		TARGET_LDFLAGS="$(TARGET_LDFLAGS) $(EXTRA_LDFLAGS) -lpthread -lrt" \
+		TARGET_LDFLAGS="$(TARGET_LDFLAGS) $(EXTRA_LDFLAGS) -lpthread -lrt -L$(STAGING_DIR)/usr/lib/mysql -lmysqlclient" \
+                TARGET_CPPFLAGS=" -I$(STAGING_DIR)/usr/include/mysql" \
 		TARGET_INCDIRS="$(TARGET_INCDIRS)" \
 		TARGET_LIBDIRS="$(TARGET_LIBDIRS) $(STAGING_DIR)/usr/lib/" \
-		CFLAGS= \
-		CXXFLAGS= \
-		LDFLAGS= \
+		CFLAGS="$(TARGET_CFLAGS) $(TARGET_CPPFLAGS)" \
+		CXXFLAGS="" \
+		LDFLAGS="" \
 		./configure \
 			-prefix /usr \
 			-extprefix $(TOOLCHAIN_DIR) \
@@ -129,7 +130,6 @@ define Build/Configure
 			-no-iconv \
 			-no-pch \
 			-no-rpath \
-			-no-qml-debug \
 			-no-strip \
 			-no-cups \
 			-no-dbus \
@@ -164,9 +164,11 @@ define Build/Compile
 	TARGET_RANLIB="$(TARGET_CROSS)ranlib" \
 	TARGET_CFLAGS="$(TARGET_CFLAGS) $(EXTRA_CFLAGS)" \
 	TARGET_CXXFLAGS="$(TARGET_CFLAGS) $(EXTRA_CFLAGS)" \
-	TARGET_LDFLAGS="$(TARGET_LDFLAGS) $(EXTRA_LDFLAGS) -ldl -lpthread -lrt" \
-	TARGET_INCDIRS="$(TARGET_INCDIRS)" \
-	TARGET_LIBDIRS="$(TARGET_LIBDIRS) $(STAGING_DIR)/usr/lib/" \
+        STAGING_DIR="$(STAGING_DIR)" \
+        STAGING_DIR_HOST="$(STAGING_DIR)/../host" \
+	TARGET_LDFLAGS="$(TARGET_LDFLAGS) $(EXTRA_LDFLAGS) -ldl -lpthread -lrt -lmysqlclient -L$(STAGING_DIR)/usr/lib/mysql " \
+	TARGET_INCDIRS="$(TARGET_INCDIRS) $(STAGING_DIR)/usr/include/mysql/" \
+	TARGET_LIBDIRS="$(TARGET_LIBDIRS) $(STAGING_DIR)/usr/lib/ $(STAGING_DIR)/usr/lib/mysql" \
 	STAGING_DIR="$(STAGING_DIR)" \
 	STAGING_DIR_HOST="$(STAGING_DIR)/../host" \
 	PKG_CONFIG_SYSROOT="$(STAGING_DIR)" \
@@ -267,3 +269,4 @@ $(eval $(call BuildPackage,qt5-xml))
 $(eval $(call BuildPackage,qt5-serialport))
 $(eval $(call BuildPackage,qt5-xmlpatterns))
 $(eval $(call BuildPackage,qt5-test))
+
